Remove unused classes (factories, repositories, DTOs, mappers) and enhance repository/controller annotations
- Deleted unused components: `BaseEntityFactory`, `LevelRepository`, DTOs (`LevelRequestDTO`, `LevelResponseDTO`, etc.), and others to streamline the codebase.
- Simplified controllers by extending generic `CrudController` where applicable.
- Added Swagger annotations (`@Operation`, `@Tag`) and logging (`@Slf4j`) for better API documentation and debugging.
- Updated repository methods and cleaned up unused queries.